fixed wordwrap bug vuetify index.styl

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -29,3 +29,9 @@ margin-bottom: 10px;
   box-shadow: none;
   color: white;
 }
+
+
+/** to stop wordwrapping caused by vuetify */
+.v-card__text, .v-card__title {
+  word-break: normal; /* maybe !important  */
+}
